Clean up: fix css overflow nit and add todo comment

--- a/services/web-frontend/src/styles/Sidebar.css
+++ b/services/web-frontend/src/styles/Sidebar.css
@@ -3,6 +3,7 @@
     background-color: slategray;
     display: flex;
     height: 100%;
+    overflow: hidden;
 }
 
 .sidebar-collapsed {
